utf-8 mit umlaute

--- a/Server/public/views/addeditRecipe.tpl.html
+++ b/Server/public/views/addeditRecipe.tpl.html
@@ -8,7 +8,7 @@
                 </button>
                 <div>
                     <span ng-show="addRecipe">Rezept editieren</span>
-                    <span ng-hide="addRecipe">Rezept hinzufuegen</span>
+                    <span ng-hide="addRecipe">Rezept hinzufügen</span>
                 </div>
             </div>
         </div>
