--- a/Server/public/views/searchRecipe.tpl.html
+++ b/Server/public/views/searchRecipe.tpl.html
@@ -2,8 +2,8 @@
     <div class="container" >
         <div class="row title-bg">
             <div class="col s12 l12">
-                <h3 class="">Rezepte auswählen</h3>
-                <span>Suchen und auswählen</span>
+                <h3 class="">Rezepte auswÃ¤hlen</h3>
+                <span>Suchen und auswÃ¤hlen</span>
             </div>
         </div>
     </div>
@@ -34,7 +34,7 @@
     <div class="row">
         <div class="col s4"  ng-show="showSearchOptions">
             <div class="card foodcategory searchplus clearfix">
-                <h5>Kategorie auswählen</h5>
+                <h5>Kategorie auswÃ¤hlen</h5>
                 <ul class="left">
                     <li>
                         <input type="checkbox" class="filled-in" id="suppen">
@@ -118,7 +118,7 @@
                     <img src="pictures/food2_400.jpg">
                 </div>
                 <div class="card-content">
-                    <p>Registrierte Benutzer können ihre eigene Rezepte erfassen</p>
+                    <p>Registrierte Benutzer kÃ¶nnen ihre eigene Rezepte erfassen</p>
                 </div>
                 <div class="card-action">
                     <a class="btn" href="#/addRecipe">erfassen</a>
@@ -133,7 +133,7 @@
                     <img src="pictures/food1_400.jpg">
                 </div>
                 <div class="card-content">
-                    <p>Das beste Sandwitch des Kantons Züri - neu mit züribrötli</p>
+                    <p>Das beste Sandwitch des Kantons ZÃ¼ri - neu mit zÃ¼ribrÃ¶tli</p>
                 </div>
                 <div class="card-action">
                     <a class="btn" href="#/addRecipe">zum Rezept</a>
@@ -148,7 +148,7 @@
                     <img src="pictures/food2_400.jpg">
                 </div>
                 <div class="card-content">
-                    <p>Registrierte Benutzer können ihre eigene Rezepte erfassen</p>
+                    <p>Registrierte Benutzer kÃ¶nnen ihre eigene Rezepte erfassen</p>
                 </div>
                 <div class="card-action">
                     <a class="btn" href="#/addRecipe">erfassen</a>
@@ -163,7 +163,7 @@
                     <img src="pictures/food1_400.jpg">
                 </div>
                 <div class="card-content">
-                    <p>Das beste Sandwitch des Kantons Züri - neu mit züribrötli</p>
+                    <p>Das beste Sandwitch des Kantons ZÃ¼ri - neu mit zÃ¼ribrÃ¼tli</p>
                 </div>
                 <div class="card-action">
                     <a class="btn" href="#/addRecipe">zum Rezept</a>
