--- a/Server/public/views/viewRecipe.tpl.html
+++ b/Server/public/views/viewRecipe.tpl.html
@@ -14,11 +14,11 @@
                 <i class="large material-icons prefix">receipt</i>
             </div>
             <div class="col s10 l10 recipe-header">
-                <h2>Spaghetti Carbonara mit Zwiebeln {{viewRecipeCtrl.recipe.title}}</h2>
+                <h2>{{viewRecipeCtrl.recipe.title}}</h2>
                         <span class="clearfix">
                             <h5>Beschreibung</h5>
                         </span>
-                <p class="flow-text text-accent-1">Kohlenhydrate sind fein{{viewRecipeCtrl.recipe.description}}</p>
+                <p class="flow-text text-accent-1">{{viewRecipeCtrl.recipe.description}}</p>
             </div>
         </div>
         <!--content image and data-->
