--- a/Server/public/views/addeditRecipe.tpl.html
+++ b/Server/public/views/addeditRecipe.tpl.html
@@ -21,32 +21,14 @@
                             </span>
                 <div class="divider"></div>
                 <p>Bitte mindestens ein Photo hochladen. Danke!</p>
-                <img class="recipe-img" src="pictures/empty_plate.jpg">
+                <img ng-show="!addeditRecipeCtrl.recipe.images" class="recipe-img" src="pictures/empty_plate.jpg">
                 <div ng-repeat="image in addeditRecipeCtrl.recipe.images">
                     <img class="img-menu" ng-src="{{image.src}}"/>
-                </div>
-                <br />
-                <br />
-                <fb-file-upload recipe="addeditRecipeCtrl.recipe"></fb-file-upload>
-
-                <div class="img-buttons">
-                    <button class="btn right">hinzufügen</button>
-                    &nbsp;
+                    <!-- TODO lösch-funktion -->
                     <button class="btn right disabled">löschen</button>
                 </div>
                 <br />
-                <div >
-                    <p>second file upload suggestion</p>
-                    <form action="#">
-                        <div class="file-field input-field">
-                            <input class="file-path validate" type="text" fileread="recipe.image"/>
-                            <div class="btn">
-                                <span>Datei</span>
-                                <input type="file" />
-                            </div>
-                        </div>
-                    </form>
-                </div>
+                <fb-file-upload recipe="addeditRecipeCtrl.recipe"></fb-file-upload>
             </div>
             <div class="col l2">&nbsp;</div>
             <!--right side: Add Recipe-->
