show user name instead of its id

--- a/Server/public/views/viewRecipe.tpl.html
+++ b/Server/public/views/viewRecipe.tpl.html
@@ -50,7 +50,7 @@
                     </div>
                     <div class="card-content">
                         <p>Title: {{viewRecipeCtrl.recipe.title}}<br/></p>
-                        <p>Author: {{viewRecipeCtrl.recipe.userId}}<br/></p>    <!-- TODO filter for userId > Name   filter für userausgabe / author -->
+                        <p>Author: {{viewRecipeCtrl.recipe.userName}}<br/></p>
                         <p>Anzahl Personen: {{viewRecipeCtrl.recipe.numPerson}}<br/><p/>
                         <p>Backzeit: {{viewRecipeCtrl.recipe.bakingTime | minutesToHoursMinutes}}<br/></p>
                         <p>Vorbereitungszeit: {{viewRecipeCtrl.recipe.preparationTime | minutesToHoursMinutes}}<br/></p>
