testing some issues, fixing some

--- a/Server/public/css/fb-styles.css
+++ b/Server/public/css/fb-styles.css
@@ -524,6 +524,17 @@ body {
 .clear {
   clear: both; }
 
+.container {
+  width: 100%;
+  padding: 0; }
+
+.container .row {
+  margin-left: 0;
+  margin-right: 0; }
+
+.nav-wrapper {
+  background: #0277bd; }
+
 .ribbon {
   background-image: url("../pictures/bg_artfood_1500.jpg");
   background-position: center bottom;
@@ -534,15 +545,13 @@ body {
 .supercontainer {
   margin: auto;
   margin-top: -210px;
-  max-width: 1000px; }
+  min-width: 767px;
+  max-width: 1100px; }
 
-.container {
-  width: 100% !important;
-  padding: 0; }
-
-.container .row {
-  margin-left: 0;
-  margin-right: 0; }
+.feedback-window {
+  min-width: 500px;
+  background: #0059bc;
+  color: red; }
 
 .userForm input.ng-invalid.ng-touched {
   background-color: #ffc2b8; }
@@ -553,21 +562,6 @@ body {
 .menu {
   background-color: #8a6343; }
 
-/*
-.outer-wrapper{
-  position: absolute;
-  //background-image: url('');
-  background-size: cover;
-  background-attachment: fixed;
-  margin: 0;
-  top:0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  // temporary
-  min-height: 800px;
-}
-*/
 .fb-layout {
   margin: 0 auto;
   max-width: 1200px;
@@ -644,9 +638,22 @@ body {
   .pixupload button {
     margin-left: 1rem; }
 
+.img-chooser {
+  border: 1px solid #AA3333;
+  background: #29b6f6; }
+
 .recipe-img {
   max-width: 220px;
   height: auto; }
+
+.recipe-img-slider {
+  max-width: 100%;
+  height: auto; }
+
+.img-caption {
+  z-index: 50;
+  background: rgba(22, 22, 22, 0.3);
+  color: #ffd54f; }
 
 .recipe-name {
   margin-left: 1rem; }
