--- a/Server/public/views/searchRecipe.tpl.html
+++ b/Server/public/views/searchRecipe.tpl.html
@@ -98,7 +98,7 @@
     </div>
     <!--Search resultlist -->
     <div class="row">
-        <div class="col s10 l10">
+        <div class="col s12 m12 l12">
             <div class="card">
                 <div class="card-title text-black">
                     <h3 class="orange-text">Ergebnisse</h3>
