--- a/Server/public/css/fb-styles.css
+++ b/Server/public/css/fb-styles.css
@@ -550,9 +550,31 @@ body {
   max-width: 1100px; }
 
 .feedback-window {
-  min-width: 500px;
-  background: #0059bc;
-  color: red; }
+  position: absolute;
+  top: 25px;
+  z-index: 20;
+  width: 700px;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  border: 1px solid black;
+  border-radius: 10px;
+  text-align: center;
+  background: rgba(250, 250, 250, 0.2);
+  padding: 10px; }
+  .feedback-window.info {
+    color: #0277bd;
+    background: #FFF; }
+  .feedback-window.warn {
+    color: #999;
+    background: #faffbd; }
+  .feedback-window.error {
+    color: #bf360c;
+    background: #222; }
+  .feedback-window p {
+    text-align: center;
+    font-size: 1.5rem; }
 
 .userForm input.ng-invalid.ng-touched {
   background-color: #ffc2b8; }
