addrecipe: choose 0 baketime and a FANCY favicon

--- a/Server/public/views/addeditRecipe.tpl.html
+++ b/Server/public/views/addeditRecipe.tpl.html
@@ -95,6 +95,7 @@
                         <div class="col s6">
                             <select ng-model="addeditRecipeCtrl.recipe.bakingTime" class="browser-default">
                                 <option value="" disabled selected >Backzeit</option>
+                                <option value="0">Keine Backzeit</option>
                                 <option value="10">10 -20 min</option>
                                 <option value="20">20 -30 min</option>
                                 <option value="30">30 -40 min</option>
@@ -110,6 +111,7 @@
                         <div class="col s6">
                             <select ng-model="addeditRecipeCtrl.recipe.preparationTime" class="browser-default">
                                 <option value="" disabled selected>Zubereitungszeit</option>
+                                <option value="0">ganz kurz</option>
                                 <option value="10">10 -20 min</option>
                                 <option value="20">20 -30 min</option>
                                 <option value="30">30 -40 min</option>
