--- a/Server/public/views/start.tpl.html
+++ b/Server/public/views/start.tpl.html
@@ -1,23 +1,50 @@
 <div class="row">
-    <div class="col s2">
+    <div class="col  m2">
         &nbsp;
     </div>
-    <div class="col s4">
+    <div class="col s4 m4">
         <div class="card white darken-4">
             <div class="card-content">
                 <fb-login-form></fb-login-form>
             </div>
         </div>
     </div>
-    <div class="col s4">
+    <div class="col s4 m4 ">
         <div class="card white darken-4">
             <div class="card-content">
-                <!--<div class="card-title">Registrieren</div>-->
                 <fb-register-form></fb-register-form>
             </div>
         </div>
     </div>
-    <div class="col s2">
+    <div class="col m2">
         &nbsp;
     </div>
 </div>
+
+<!--TODO: TAB system not working like this-->
+<!--<div class="row">-->
+    <!--<div class="col s12 m12">-->
+        <!--<ul class="tabs">-->
+            <!--<li class="tab col s4 m4">-->
+                <!--<a href="#login">Login</a>-->
+            <!--</li>-->
+            <!--<li class="tab col s4 m4">-->
+                <!--<a href="#register">register</a>-->
+            <!--</li>-->
+        <!--</ul>-->
+    <!--</div>-->
+    <!--<div id="login">-->
+        <!--<div class="col s4 m4">-->
+            <!--<div class="card white darken-4">-->
+                <!--<fb-login-form></fb-login-form>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
+    <!--<div id="register">-->
+        <!--<div class="col s4 m4">-->
+            <!--<div class="card white darken-4">-->
+                <!--<fb-register-form></fb-register-form>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
+<!--</div>-->
