change user: email and password  implemented

--- a/Server/public/views/viewUser.tpl.html
+++ b/Server/public/views/viewUser.tpl.html
@@ -1,5 +1,5 @@
 
-<fb-user-details user="viewUserCtrl.user"></fb-user-details>
+<fb-user-details user="viewUserCtrl.user" save="viewUserCtrl.save"></fb-user-details>
 
 <br/>
 <br/>
