--- a/Server/public/views/searchRecipe.tpl.html
+++ b/Server/public/views/searchRecipe.tpl.html
@@ -118,7 +118,7 @@
                     <img src="pictures/food2_400.jpg">
                 </div>
                 <div class="card-content">
-                    <p>Registrierte Benutzer können ihre eigene Rezepte erfassen</p>
+                    <p>Registrierte Benutzer können ihre eigenen Rezepte erfassen</p>
                 </div>
                 <div class="card-action">
                     <a class="btn" href="#/addRecipe">erfassen</a>
