--- a/Server/public/views/addeditRecipe.tpl.html
+++ b/Server/public/views/addeditRecipe.tpl.html
@@ -89,19 +89,16 @@
                             <div class=" col s6">
                                 <select ng-model="addeditRecipeCtrl.recipe.category" class="browser-default">
                                     <option value="" disabled selected>Rezeptkategorie</option>
-                                    <option>Suppen</option>
-                                    <option>Vorspeise</option>
-                                    <option>Hauptgang</option>
-                                    <option>Vegetarisch</option>
-                                    <option>Salate</option>
-                                    <option>Dessert</option>
+                                    <option value="vorspeise">Vorspeise</option>
+                                    <option value="hauptspeise">Hauptgang</option>
+                                    <option value="dessert">Dessert</option>
+                                    <option value="snack">Snack</option>
                                 </select>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col s6">
                                 <h6>Backzeit</h6>
-                                <!--<i class="material-icons">alarm_on</i>-->
                             </div>
                             <div class="col s6">
                                 <select ng-model="addeditRecipeCtrl.recipe.bakingTime" class="browser-default">
